--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,15 @@ jobs:
         run: npm run build
 
       - name: Deploy to EC2
+        env:
+          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.EC2_SSH_KEY }} ec2-user@52.15.69.16 << 'EOF'
+          # Write the private SSH key to a temporary file
+          echo "$EC2_SSH_KEY" > /tmp/ec2_key.pem
+          # Set correct permissions for the key
+          chmod 600 /tmp/ec2_key.pem
+          # Use the key to SSH into the EC2 instance and run the commands
+          ssh -o StrictHostKeyChecking=no -i /tmp/ec2_key.pem ec2-user@52.15.69.16 << 'EOF'
             cd /ai-platform-website
             git pull origin main
             npm install
