--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,89 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
+/dist/
 
-# misc
+# Miscellaneous
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+Thumbs.db
+.env
+.env.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+/logs/
+*.log
+
+# Operating System files
+.DS_Store
+Thumbs.db
+*.swp
+
+# IDE specific files
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Amplify files (do not edit between amplify markers)
+#amplify-do-not-edit-begin
+amplify/#current-cloud-backend/
+amplify/.config/local-*
+amplify/logs/
+amplify/mock-data/
+amplify/mock-api-resources/
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation/
+amplify/backend/.temp/
+amplify/backend/.config/
+amplify/.graphqlconfig.yml
+amplify/.frontend/
+amplify/team-provider-info.json
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
+
+# AWS exports and configurations in src/
+src/aws-exports.js
+src/aws-exports.ts
+src/aws-exports.json
+
+# Ignore Python cache and compiled files
+*.pyc
+__pycache__/
+
+# Ignore dependencies and build artifacts in Amplify functions
+amplify/backend/function/**/src/**/*.pyc
+amplify/backend/function/**/src/**/__pycache__/
+amplify/backend/function/**/src/**/*
+!amplify/backend/function/**/src/index.py
+!amplify/backend/function/**/src/requirements.txt
+
+# Ignore build directories in functions
+amplify/backend/function/**/dist/
+amplify/backend/function/**/build/
+
+# Optional NPM files (include if you prefer to manage dependencies without lock files)
+package-lock.json
+yarn.lock
