--- a/amplify/backend/function/aiplatformwebsite70aa5971/Pipfile
+++ b/amplify/backend/function/aiplatformwebsite70aa5971/Pipfile
@@ -1,12 +1,12 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-neo4j = "*"
 
 [dev-packages]
+
+[packages]
+src = {editable = true, path = "./src"}
 
 [requires]
 python_version = "3.12"
