fix build error maybe

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,6 +6,13 @@
       "service": "Lambda"
     }
   },
+  "hosting": {
+    "amplifyhosting": {
+      "lastPushTimeStamp": "2024-12-09T00:15:26.358Z",
+      "service": "amplifyhosting",
+      "type": "cicd"
+    }
+  },
   "parameters": {
     "AMPLIFY_function_aiplatformwebsite70aa5971_deploymentBucketName": {
       "usedBy": [
@@ -20,6 +27,22 @@
         {
           "category": "function",
           "resourceName": "aiplatformwebsite70aa5971"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_appId": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_type": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
         }
       ]
     }
