another change. helppppppp

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -32,6 +32,7 @@
   "function": {
     "aiplatformwebsite70aa5971": {
       "build": true,
+      "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     }
